@@ -587,7 +587,7 @@ public class JSONObject
                 {
                     try
                     {
-                        return new Integer( Integer.parseInt( s.substring( 2 ), 16 ) );
+                        return Integer.parseInt( s.substring( 2 ), 16 );
                     }
                     catch ( Exception e )
                     {
@@ -598,7 +598,7 @@ public class JSONObject
                 {
                     try
                     {
-                        return new Integer( Integer.parseInt( s, 8 ) );
+                        return Integer.parseInt( s, 8 );
                     }
                     catch ( Exception e )
                     {
@@ -614,10 +614,10 @@ public class JSONObject
                 }
                 else
                 {
-                    Long myLong = new Long( s );
-                    if ( myLong.longValue() == myLong.intValue() )
+                    Long myLong = Long.valueOf( s );
+                    if ( myLong == myLong.intValue() )
                     {
-                        return new Integer( myLong.intValue() );
+                        return myLong.intValue();
                     }
                     else
                     {
@@ -1407,7 +1407,7 @@ public class JSONObject
      */
     public JSONObject put( String key, int value ) throws JSONException
     {
-        put( key, new Integer( value ) );
+        put( key, Integer.valueOf( value ) );
         return this;
     }
 
@@ -1421,7 +1421,7 @@ public class JSONObject
      */
     public JSONObject put( String key, long value ) throws JSONException
     {
-        put( key, new Long( value ) );
+        put( key, Long.valueOf( value ) );
         return this;
     }
 
